added code demos

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,25 @@
   <body>
     <main>Loading...</main>
 	<script src="js/app.js"></script>
+
+    <script>
+
+        // const colorTool = {
+        //     _colors: [ 'red', 'white', 'blue', 'yellow' ],
+
+        //     [Symbol.iterator]: function* () {
+
+        //         for (let i =0; i < colorTool._colors.length; i++) {
+        //             console.log('color tool color:', colorTool._colors[i]);
+        //             yield colorTool._colors[i];
+        //         }
+        //     }
+        // }
+
+        // for (let color of colorTool) {
+        //     console.log('for color:', color);
+        // }
+
+    </script>
   </body>
 </html>
